# njoy-NDItk

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: ContinuousIntegration.yml
cmake/: dependencies.cmake  develop_dependencies.cmake  nditk-config.cmake.in  release_dependencies.cmake  unit_testing.cmake  unit_testing_python.cmake
python/examples/: NDItk-getting-started-example-1.ipynb
python/examples/.ipynb_checkpoints/: NDItk-getting-started-example-1-checkpoint.ipynb
python/src/: MultigroupTable.python.cpp  NDItk.python.cpp  definitions.hpp  depletion.python.cpp  multigroup.python.cpp  read.hpp
python/src/depletion/: Multiplicities.python.cpp  Product.python.cpp  ReactionMultiplicities.python.cpp  ReactionMultiplicityType.python.cpp
python/src/multigroup/: AverageFissionEnergyRelease.python.cpp  CrossSection.python.cpp  EnergyGroupStructure.python.cpp  FissionNeutronMultiplicity.python.cpp  FissionNeutronProduction.python.cpp  FissionNeutronSpectrumMatrix.python.cpp  FissionNeutronSpectrumVector.python.cpp  FissionType.python.cpp  FluxWeights.python.cpp  HeatingNumbers.python.cpp  Kerma.python.cpp  LegendreMoment.python.cpp  Metadata.python.cpp  OutgoingParticleTransportData.python.cpp  OutgoingParticleTypes.python.cpp  ReactionCrossSections.python.cpp  ScatteringMatrix.python.cpp  Structure.python.cpp  TotalCrossSection.python.cpp  Velocities.python.cpp
python/test/: Test_NDItk_MultigroupTable.py
python/test/depletion/: Test_NDItk_depletion_Multiplicities.py  Test_NDItk_depletion_Product.py  Test_NDItk_depletion_ReactionMultiplicities.py
python/test/multigroup/: Test_NDItk_multigroup_AverageFissionEnergyRelease.py  Test_NDItk_multigroup_CrossSection.py  Test_NDItk_multigroup_EnergyGroupStructure.py  Test_NDItk_multigroup_FissionNeutronMultiplicity.py  Test_NDItk_multigroup_FissionNeutronProduction.py  Test_NDItk_multigroup_FissionNeutronSpectrumMatrix.py  Test_NDItk_multigroup_FissionNeutronSpectrumVector.py  Test_NDItk_multigroup_FluxWeights.py  Test_NDItk_multigroup_HeatingNumbers.py  Test_NDItk_multigroup_Kerma.py  Test_NDItk_multigroup_LegendreMoment.py  Test_NDItk_multigroup_Metadata.py  Test_NDItk_multigroup_OutgoingParticleTransportData.py  Test_NDItk_multigroup_OutgoingParticleTypes.py  Test_NDItk_multigroup_ReactionCrossSections.py  Test_NDItk_multigroup_ScatteringMatrix.py  Test_NDItk_multigroup_Structure.py  Test_NDItk_multigroup_TotalCrossSection.py  Test_NDItk_multigroup_Velocities.py
src/: NDItk.hpp
src/NDItk/: MultigroupTable.hpp  fromFile.hpp  toFile.hpp
src/NDItk/MultigroupTable/src/: ctor.hpp  generateOutgoingLegendreOrderMetadata.hpp  generateOutgoingStructureMetadata.hpp  read.hpp  readOutgoingData.hpp  readOutgoingProductionMatrix.hpp  readOutgoingStructure.hpp  readPrimaryData.hpp  readPrimaryStructure.hpp  readRecord.hpp  verify.hpp
src/NDItk/MultigroupTable/test/: CMakeLists.txt  MultigroupTable.test.cpp
src/NDItk/base/: InformationRecord.hpp  IntegerListRecord.hpp  Keyword.hpp  ListRecord.hpp  RealListRecord.hpp  Record.hpp  RecordBase.hpp  SingleIntegerRecord.hpp  SingleRealRecord.hpp  SingleStringRecord.hpp  SingleValueRecord.hpp  StringListRecord.hpp  SubListRecord.hpp
src/NDItk/base/InformationRecord/test/: CMakeLists.txt  InformationRecord.test.cpp
src/NDItk/base/IntegerListRecord/src/: read.hpp  write.hpp
src/NDItk/base/IntegerListRecord/test/: CMakeLists.txt  IntegerListRecord.test.cpp
src/NDItk/base/Keyword/src/: ctor.hpp  splitKeyword.hpp
src/NDItk/base/Keyword/test/: CMakeLists.txt  Keyword.test.cpp
src/NDItk/base/RealListRecord/src/: read.hpp  write.hpp
src/NDItk/base/RealListRecord/test/: CMakeLists.txt  RealListRecord.test.cpp
src/NDItk/base/RecordBase/src/: ctor.hpp  read.hpp  write.hpp
src/NDItk/base/SingleIntegerRecord/test/: CMakeLists.txt  SingleIntegerRecord.test.cpp
src/NDItk/base/SingleRealRecord/test/: CMakeLists.txt  SingleRealRecord.test.cpp
src/NDItk/base/SingleStringRecord/test/: CMakeLists.txt  SingleStringRecord.test.cpp
src/NDItk/base/StringListRecord/src/: read.hpp  write.hpp
src/NDItk/base/StringListRecord/test/: CMakeLists.txt  StringListRecord.test.cpp
src/NDItk/base/SubListRecord/src/: ctor.hpp
src/NDItk/depletion/: Multiplicities.hpp  Product.hpp  ReactionMultiplicities.hpp  ReactionMultiplicityType.hpp
src/NDItk/depletion/Multiplicities/src/: ctor.hpp  generateData.hpp  verify.hpp  write.hpp
src/NDItk/depletion/Multiplicities/test/: CMakeLists.txt  Multiplicities.test.cpp
src/NDItk/depletion/Product/src/: ctor.hpp  generateData.hpp  verify.hpp  write.hpp
src/NDItk/depletion/Product/test/: CMakeLists.txt  Product.test.cpp
src/NDItk/depletion/ReactionMultiplicities/src/: ctor.hpp  generateBlocks.hpp  generateData.hpp  getPostFix.hpp  print.hpp  read.hpp  verify.hpp
src/NDItk/depletion/ReactionMultiplicities/test/: CMakeLists.txt  ReactionMultiplicities.test.cpp
src/NDItk/multigroup/: AverageFissionEnergyRelease.hpp  CrossSection.hpp  EnergyBounds.hpp  EnergyGroupStructure.hpp  FissionNeutronMultiplicity.hpp  FissionNeutronProduction.hpp  FissionNeutronSpectrumMatrix.hpp  FissionNeutronSpectrumVector.hpp  FissionType.hpp  FluxWeights.hpp  HeatingNumbers.hpp  Kerma.hpp  LegendreMoment.hpp  Metadata.hpp  OutgoingParticleTransportData.hpp  OutgoingParticleTypes.hpp  ReactionCrossSections.hpp  ScatteringMatrix.hpp  Structure.hpp  TotalCrossSection.hpp  Velocities.hpp  Weights.hpp
src/NDItk/multigroup/AverageFissionEnergyRelease/src/: ctor.hpp  read.hpp
src/NDItk/multigroup/AverageFissionEnergyRelease/test/: AverageFissionEnergyRelease.test.cpp  CMakeLists.txt
src/NDItk/multigroup/CrossSection/src/: ctor.hpp  generateData.hpp  verify.hpp  write.hpp
src/NDItk/multigroup/CrossSection/test/: CMakeLists.txt  CrossSection.test.cpp
src/NDItk/multigroup/EnergyBounds/src/: ctor.hpp
src/NDItk/multigroup/EnergyBounds/test/: EnergyBounds.test.cpp
src/NDItk/multigroup/EnergyGroupStructure/src/: ctor.hpp  read.hpp  verify.hpp
src/NDItk/utility/: splitKeyword.hpp
src/NDItk/utility/test/: CMakeLists.txt  splitKeyword.test.cpp
(+89 files in other folders)
